style.css
* {
  box-sizing: border-box;
}

.slider {
  width: 100%;
  overflow: hidden;
  position: relative;
}

.slider-track {
  display: flex;
  transition: transform 300ms ease;
}

.slide {
  height: 420px;
  flex: 0 0 auto;
  font-size: 30px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.btn {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  border: none;
  background: rgba(0, 0, 0, 0.4);
  color: #fff;
  padding: 6px 10px;
  cursor: pointer;
  font-size: 22px;
}

.prev {
  left: 10px;
}
.next {
  right: 10px;
}

.dots {
  position: absolute;
  margin-top: 10px;

  display: flex;
  justify-content: center;
  gap: 6px;
  left: 50%;
  transform: translateX(-50%);
  bottom: 5px;
}

.dots button {
  width: 10px;
  height: 10px;
  border-radius: 50%;
  border: none;
  background: #ffffff;
  cursor: pointer;
}

.dots button.active {
  background: #000000;
}

.slide img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  display: block;
}

